[package]
name = "bevy_lots_of_systems"
version = "0.1.0"
edition = "2021"
authors = ["UsaidPro"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["repeat_macro"]

[dependencies]
#bevy = { version = "0.13.2", features = ["dynamic_linking"] }
bevy = {git = "https://github.com/james7132/bevy.git", branch = "static-task-pool", features = ["dynamic_linking"]}
bevy_rapier3d = "0.25.0"
rand = "0.8.5"
repeat_macro = { path = "repeat_macro" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

#[profile.release]
#lto = true
#codegen-units = 1
